--- a/src/app/shared/components/dropdown/dropdown.component.scss
+++ b/src/app/shared/components/dropdown/dropdown.component.scss
@@ -37,13 +37,13 @@
 }
 
 .dropdown-option-list-container {
-    @apply absolute flex flex-col z-20;
+    @apply absolute flex flex-col z-10;
     @apply w-full top-full left-0 mt-2;
     @apply shadow rounded overflow-y-auto;
 }
 
 .dropdown-option-list-container .dropdown-option-list-item-container {
-    @apply z-20;
+    @apply z-10;
 }
 
 .dropdown-option-list-item-container {
